<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/check_in_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkIn_text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"/>

            <DatePicker
                android:id="@+id/checkin_date_picker_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                app:layout_constraintTop_toBottomOf="@id/check_in_date_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/check_out_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkOut_text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/checkin_date_picker_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"/>

            <DatePicker
                android:id="@+id/checkout_date_picker_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                app:layout_constraintTop_toBottomOf="@id/check_out_date_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/guests_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guestNumber_text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/checkout_date_picker_view"
                app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"/>

            <EditText
                android:id="@+id/guests_count_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guests_text_view"
                app:layout_constraintTop_toTopOf="@id/guests_text_view"
                app:layout_constraintBottom_toBottomOf="@id/guests_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="Guests Count"
                android:inputType="number" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/guests_text_view"
                app:layout_constraintTop_toBottomOf="@id/guests_text_view"
                android:text="@string/guestName_text"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/name_text_view"
                app:layout_constraintTop_toTopOf="@id/name_text_view"
                app:layout_constraintBottom_toBottomOf="@id/name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="Your Good Name" />


            <TextView
                android:id="@+id/search_confirm_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toStartOf="@id/guests_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_text_view"/>

            <Button
                android:id="@+id/check_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/check_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toBottomOf="@id/search_confirm_text_view"/>

            <Button
                android:id="@+id/search_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/search_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check_button" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="Clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/search_button"/>


            <Button
                android:id="@+id/retrieve_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="Retrieve From Shared Pref"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/clear_button"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>