<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/choosen_hotel_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="Hotel Name:"
        android:fontFamily="sans-serif"
        android:textColor="@color/purple_700"/>

        <TextView
            android:id="@+id/choosen_hotel_name_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            app:layout_constraintTop_toTopOf="@id/choosen_hotel_name_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/choosen_hotel_name_text_view"
            app:layout_constraintStart_toEndOf="@id/choosen_hotel_name_text_view"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            tools:text = "Hotel Name"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/choosen_check_in_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/choosen_hotel_name_text_view"
            app:layout_constraintStart_toStartOf="@id/choosen_hotel_name_text_view"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/checkIn_text"
            android:fontFamily="sans-serif"
            android:textColor="@color/purple_700"/>

        <TextView
            android:id="@+id/choosen_check_in_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/choosen_check_in_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/choosen_check_in_text_view"
            app:layout_constraintStart_toStartOf="@id/choosen_hotel_name_text_view2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            tools:text = "Hotel Name"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/choosen_check_out_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/choosen_check_in_text_view"
            app:layout_constraintStart_toStartOf="@+id/choosen_hotel_name_text_view"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/checkOut_text"
            android:fontFamily="sans-serif"
            android:textColor="@color/purple_700"/>

        <TextView
            android:id="@+id/choosen_check_out_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/choosen_check_out_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/choosen_check_out_text_view"
            app:layout_constraintStart_toStartOf="@id/choosen_hotel_name_text_view2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            tools:text = "Hotel Name"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/choosen_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/choosen_check_out_text_view"
            app:layout_constraintStart_toStartOf="@id/choosen_hotel_name_text_view"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="Price:"
            android:fontFamily="sans-serif"
            android:textColor="@color/purple_700"/>

        <TextView
            android:id="@+id/choosen_price_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/choosen_price_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/choosen_price_text_view"
            app:layout_constraintStart_toStartOf="@id/choosen_hotel_name_text_view2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            tools:text = "Hotel Name"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/guest_list_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choosen_price_text_view"
            app:layout_constraintVertical_bias="0.186" />

        <Button
            android:id="@+id/guests_information_submit_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/confirmation_hint_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/guests_information_next_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="NEXT"
            android:visibility="gone"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/confirmation_hint_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/temp_confirmation_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/purple_500"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/guest_list_recyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="testtest" />

        <TextView
            android:id="@+id/confirmation_hint_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/purple_500"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toBottomOf="@+id/guest_list_recyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="testtest" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>